--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
                     title:demoArtists[i],
                     artist: `መዝሙር ${i+1}`,
                     lyrics: demoLyrics[i],
-                    audioPath: `audio/song${i+1}.mp3`, // Path to audio files
+                    audioPath: `song${i+1}.mp3`, // Path to audio files
                     favorite: false,
                     details: {
                         writer: i === 0 ? "ምስጋና choir " : "ምስጋና choir",
